--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-around;
   color: #fff;
+  position: relative;
 }
 
 .logo {
@@ -41,4 +42,27 @@
 .iconImg {
   width: 20px;
   height: 20px;
+}
+
+.notifications {
+  position: absolute;
+  top: 50px;
+  right: 0;
+  background-color: #fff;
+  color: #000;
+  font-weight: 300;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.notification {
+  padding: 5px;
+  font-size: 14px;
+}
+
+.notificationButton {
+  width: 80%;
+  padding: 5px;
+  margin-top: 10px;
 }
